corrections in test