@@ -49,6 +49,13 @@
       no spring-boot-maven-plugin here, since we don't want to create an executable of any module
       see https://spring.io/guides/gs/multi-module/
       -->
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+               <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+            </configuration>
+         </plugin>
       </plugins>
    </build>
    <repositories>
